<resources>
    <string name="app_name">CalculIMC</string>
    <string name="titre">Calcul de l\'IMC</string>
    <string name="hint_poids">Poids en kg</string>
    <string name="hint_taille">Taille en m</string>
    <string name="bouton_calculer">Calculer</string>
    <string name="bouton_effacer">Effacer</string>
    <string name="imc_resultat">IMC : %1$.2f</string>
    <string name="note_pedagogique">L\'IMC est utilisé ici comme support de programmation. Son interprétation ne remplace pas un avis médical.</string>

    <!-- Catégories -->
    <string name="categorie_insuffisance">Insuffisance pondérale</string>
    <string name="categorie_normale">Corpulence normale</string>
    <string name="categorie_surpoids">Surpoids</string>
    <string name="categorie_obesite_moderee">Obésité modérée</string>
    <string name="categorie_obesite_severe">Obésité sévère</string>
    <string name="categorie_obesite_morbide">Obésité morbide</string>

    <!-- Messages d'erreur -->
    <string name="erreur_champ_vide">Veuillez renseigner le poids et la taille.</string>
    <string name="erreur_valeur_invalide">Valeur saisie invalide.</string>
    <string name="erreur_valeur_non_positive">Le poids et la taille doivent être strictement positifs.</string>
</resources>